Finalize removal of unneeded RepoExt